# VorInternal

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: dllmain.cpp  injector.cpp  types.h
src/cheat/: cheat.cpp  cheat.h
src/config/: config.cpp  config.h
src/dump/: animationsystem_dll.hpp  buttons.hpp  client_dll.hpp  engine2_dll.hpp  host_dll.hpp  info.json  interfaces.hpp  materialsystem2_dll.hpp  networksystem_dll.hpp  offsets.hpp  panorama_dll.hpp  particles_dll.hpp  pulse_system_dll.hpp  rendersystemdx11_dll.hpp  resourcesystem_dll.hpp  scenesystem_dll.hpp  schemasystem_dll.hpp  server_dll.hpp  soundsystem_dll.hpp  steamaudio_dll.hpp  vphysics2_dll.hpp  worldrenderer_dll.hpp
src/math/: math.h
src/minhook/: CMakeLists.txt
src/offsets/: offsets.h
src/render/: render.cpp  render.h
